--- a/src/styles/Storyline.css
+++ b/src/styles/Storyline.css
@@ -36,3 +36,40 @@
     color: #AC9480;
 }
 
+.About h1 {
+    width: 30%;
+    margin-right: 130px;
+    text-align: left;
+    margin-top: 110px;
+
+}
+
+.About h4 {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    margin-left: 350px;
+    font-size: 50px;
+    margin-top : -50px;
+}
+
+.portfolio-icon {
+    margin-left: -10px;
+}
+
+
+.About p {
+    color: white;
+    font-size: 30px;
+    margin-left: 60px;
+    font-family: 'Baloo 2', cursive;
+
+}
+
+.skills h2{
+    color:white;
+    font-size: 30px;
+    font-family: 'Fredoka One', cursive;
+    margin-left: 930px;
+    margin-top: -300px;
+}
