--- a/src/styles/Resume.css
+++ b/src/styles/Resume.css
@@ -3,13 +3,14 @@
     margin-left: 980px;
 }
 
-.text p{
+.text a{
+    display: block;
     color: white;
     font-size: 25px;
     margin-left: 500px;
     font-family: 'Baloo 2', cursive;
     font-weight: bold;
-    margin-top: 90px;
+    margin-top: 100px;
 
 }
 
