--- a/src/styles/Contact.css
+++ b/src/styles/Contact.css
@@ -1,3 +1,28 @@
 .contact h1 {
-margin-top: 120px;
+margin-top: 80px;
+}
+
+.icon {
+        width: 80px;
+    height: 80px;
+    margin-left: 500px;
+    animation: floatIcon 2.5s ease-in-out infinite;
+}
+
+@keyframes floatIcon {
+    0% {
+        transform: translateY(0);
+    }
+    50% {
+        transform: translateY(-10px);
+    }
+    100% {
+        transform: translateY(0);
+    }
+}
+
+.icon20 {
+    width: 60px;
+    margin-left: 510px;
+    animation: floatIcon 2.5s ease-in-out infinite;
 }
