--- a/src/styles/Resume.css
+++ b/src/styles/Resume.css
@@ -1,5 +1,5 @@
 .Resume h1{
-    margin-top: 350px;
+    margin-top: 300px;
     margin-left: 980px;
 }
 
@@ -11,6 +11,7 @@
     font-family: 'Baloo 2', cursive;
     font-weight: bold;
     margin-top: 100px;
+    text-decoration: none;
 
 }
 
