--- a/src/styles/Storyline.css
+++ b/src/styles/Storyline.css
@@ -99,4 +99,18 @@
     margin-left: -100px;
 }
 
+.tech-card3 {
+    background-color: #AC9480;
+    border-radius: 25px;
+    padding: 20px;
+    height: 120px;
+    width: 200px;
+    box-shadow: 0 10px 25px rgba(0,0,0,0.15);
+}
 
+.tech-card3 h3 {
+    font-size: 20px;
+    font-family: 'Baloo 2', cursive;
+    margin-top: -10px;
+    margin-left: -140px;
+}
